--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TypeRacer</title>
+  <!-- Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://fonts.googleapis.com https://fonts.gstatic.com https://kit.fontawesome.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <title>TypeRacer - Improve Your Typing Speed and Accuracy</title>
+  <!-- Preload critical resources -->
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" as="style">
+  <link rel="preload" href="assets/css/style-bootstrap.css" as="style">
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Google Fonts -->
+  <!-- Google Fonts with display=swap for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
@@ -31,7 +39,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="instructionsModalLabel">How to Take the Test</h5>
+          <h2 class="modal-title" id="instructionsModalLabel">How to Take the Test</h2>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -166,9 +174,20 @@
 
   <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
-  <!-- FontAwesome -->
-  <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
+  <!-- FontAwesome - Replace with actual kit code or remove if not needed -->
+  <!-- <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script> -->
   <!-- Custom JavaScript -->
   <script src="assets/js extension/javascript.js" defer></script>
+  
+  <!-- Error Prevention Script -->
+  <script>
+    // Prevent console errors for missing FontAwesome
+    window.addEventListener('error', function(e) {
+      if (e.target.src && e.target.src.includes('fontawesome')) {
+        e.preventDefault();
+        console.warn('FontAwesome kit not configured - using fallback icons');
+      }
+    });
+  </script>
 </body>
 </html>
